# pick20

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: entrypoint.sh
pick20/: manage.py
pick20/pick20/: asgi.py  settings.py  urls.py  wsgi.py
pick20/tournament/: admin.py  models.py  tasks.py
pick20/tournament/migrations/: 0001_initial.py  0002_tournamentteam_school_secondary_and_more.py  0003_alter_tournamentteam_unique_together.py  0004_entry_score.py  0005_alter_tournamentteam_school_secondary_and_more.py  0006_entry_potential_score_alter_entry_score.py  0007_entry_still_alive.py
src/backend/: init-dev.sh
src/backend/accounts/: serializers.py  urls.py  views.py
src/backend/pick20/: manage.py  settings.py  urls.py
src/backend/pick20/tournament/: tasks.py
src/backend/tournament/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
src/backend/tournament/migrations/: 0008_alter_entry_potential_score.py  0009_alter_entry_unique_together_entry_name_and_more.py  0010_entry_current_rank_entry_max_potential_rank.py  0011_tournament_concluded_alter_entry_tournament.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.tsx  api.ts  main.tsx  router.tsx
src/frontend/src/components/: AppLayout.tsx  CheckOrXIcon.tsx  ProtectedRoute.tsx
src/frontend/src/pages/: Dashboard.tsx  Entries.tsx  EntryDetail.tsx  EntryList.tsx  Login.tsx  Register.tsx
src/frontend/src/tables/: EntryTable.tsx  PicksTable.tsx
